app/demo/dentari/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dentari
  labels:
    name: dentari
    app: dentari
