app/demo/dentari/otel-collector-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  labels:
    app: otel-collector
spec:
  selector:
    app: otel-collector
  type: ClusterIP
  ports:
    - name: otlp-grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
    - name: otlp-http
      protocol: TCP
      port: 4318
      targetPort: 4318
    - name: health
      protocol: TCP
      port: 13133
      targetPort: 13133
    - name: metrics
      protocol: TCP
      port: 8888
      targetPort: 8888
