app/demo/dentari/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dentari
  namespace: dentari
  labels:
    app: dentari
  annotations:
    # metallb.universe.tf/loadBalancerIPs: "192.168.0.106"
    metallb.universe.tf/loadBalancerIP: "192.168.0.106"
spec:
  selector:
    app: dentari
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 8501
      targetPort: 8501
